2002-04-08  Alex Graveley  <alex@ximian.com>

        * configure.in, src/libsoup/soup-private.h: Bump version to
        0.7.2.  A stable feature release.  Yay!

2002-04-08  Alex Graveley  <alex@ximian.com>

	* src/soup-wsdl/wsdl-trace.c (wsdl_get_output_file): Gets the
	current output file.
	(wsdl_set_output_file): Sets it.

	* src/soup-wsdl/wsdl-soap-headers.c (wsdl_emit_soap_headers): Lame
	hack around systems that don't have stdarg macros.

	* src/soup-wsdl/wsdl-soap-stubs.c (wsdl_emit_soap_stubs): Ditto.

	* src/soup-wsdl/wsdl-soap-skels.c (wsdl_emit_soap_skels): Ditto.

	* src/soup-wsdl/wsdl-soap-common.c (wsdl_emit_soap_common): Ditto.

2002-04-08  Alex Graveley  <alex@ximian.com>

	Fixes backported from HEAD:

	* src/libsoup/soup-queue.c (soup_queue_read_headers_cb): Handle
	forced no-content response codes 204, 205, and 304.  Check
	transfer-encoding before content-length to handle broken
	Traffic-Server proxies.

	* src/libsoup/soup-server.c (soup_server_get_handler): Return
	default handler if none exist.  Unregister default handler before
	resetting.
	(soup_server_register): Break out auth copying.
	(auth_context_copy): To here.

	* src/soup-httpd/soup-httpd.c (ap_ctx_get): Add stub so
	soup-apache modules an be run by soup-httpd.
	(ap_get_server_port): Ditto.

	* src/soup-wsdl/wsdl-soap-skels.c (wsdl_emit_soap_skels_service):
	Generate the _get_server function, which returns a SoupServer
	representing the protocol/port defined in the WSDL file.

	* tests/stockquote2-mod-server.sh: Added.  Runs soup-httpd using
	the libstockquote2.so module generated from
	tests/stockquote2-mod-server.c

	* tests/stockquote2-mod-server.c: Update for new API generated by
	soup-wsdl.

	* tests/mod-server-test.c (soup_server_init): Update for new
	soup_server_register API.

	* tests/stockquote2-client.c (callback): Check for transport
	error.

	* src/libsoup/soup-env.c (soup_env_get_header): Handle fully
	qualified header names in URL form.
