@@ -1,3 +1,9 @@
+2002-04-11  Alex Graveley  <alex@ximian.com>
+
+	* src/soup-ssl-proxy/soup-openssl.c (soup_openssl_get_iochannel):
+	Revert to prior SSL_connect borkenness, as the current code
+	contains an infinite loop.
+
 2002-04-08  Alex Graveley  <alex@ximian.com>
 
         * configure.in, src/libsoup/soup-private.h: Bump version to
